<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CirclePlus</string>
    <string name="app_tag">CirclePlus</string>
    <string name="app_description">
        CirclePlus is a Check-in app and provides LBS for you.
    </string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Web search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="get_location">Get Location</string>

    <string name="search_loc_hint">Type location and search</string>

    <string name="welcome_register">Welcome to register your account of Circle Plus</string>
    <string name="go_to_register">Don\'t have a Circle Plus account, go to register</string>
    <string name="login_failed">There\'s no user login&#8230; Please try again.</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">REGISTER</string>
    <string name="label_register">Register</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="label_login">Login</string>
    <string name="join">Join at</string>
    <string name="checkin_count_title">Checkin:</string>
    <string name="follower_count_title">Follower:</string>
    <string name="friend_count_title">Friend:</string>
    <string name="action_check_in">Check In</string>
    <string name="label_checkin">Checkin</string>
    <string name="location_name">Location Name:</string>
    <string name="address_name">Address Name:</string>
    <string name="lat_value">Lat Value:</string>
    <string name="lng_value">Lng Value:</string>
    <string name="business_name">Business Name:</string>
    <string name="location_type">Location Type: (1) Education (2) Travel (3) Food (4) Entertainment (5) Traffic</string>
    <string name="register_business">Register Business</string>
    <string name="label_business">Business</string>
    <string name="label_grant_score">Score</string>
    <string name="grant">GRANT</string>
    <string name="checkin_name">Checkin Name:</string>
    <string name="checkin_time">Checkin Time:</string>
    <string name="checkin_user">Checkin User:</string>
    <string name="checkin_shout">Checkin Shout:</string>
    <string name="grant_it_score">Grant it a score:</string>

    <string-array name="titles_array">
        <item>Home</item>
        <item>Favorites</item>
        <item>About Me</item>
        <item>Business</item>
    </string-array>

</resources>
